@@ -17,8 +17,10 @@
 
 package org.apache.solr.util;
 
+import java.util.AbstractMap;
+import java.util.AbstractSet;
 import java.util.ArrayList;
-import java.util.Collections;
+import java.util.Iterator;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
@@ -26,22 +28,20 @@ import java.util.Set;
 import java.util.function.BiConsumer;
 import java.util.function.Function;
 import java.util.function.Predicate;
-import org.apache.solr.cluster.api.SimpleMap;
 import org.apache.solr.common.ConfigNode;
 import org.apache.solr.common.util.PropertiesUtil;
-import org.apache.solr.common.util.WrappedSimpleMap;
 
 /** ConfigNode impl that copies and maintains data internally from DOM */
 public class DataConfigNode implements ConfigNode {
   public final String name;
-  public final SimpleMap<String> attributes;
-  public final SimpleMap<List<ConfigNode>> kids;
+  public final Map<String, String> attributes;
+  public final Map<String, List<ConfigNode>> kids;
   public final String textData;
 
   public DataConfigNode(ConfigNode root) {
     Map<String, List<ConfigNode>> kids = new LinkedHashMap<>();
     name = root.name();
-    attributes = wrap(root.attributes());
+    attributes = wrapSubstituting(root.attributes());
     textData = root.txt();
     root.forEachChild(
         it -> {
@@ -54,31 +54,17 @@ public class DataConfigNode implements ConfigNode {
         e.setValue(List.copyOf(e.getValue()));
       }
     }
-    this.kids = kids.isEmpty() ? EMPTY : new WrappedSimpleMap<>(Map.copyOf(kids));
+    this.kids = Map.copyOf(kids);
   }
 
-  public String subtituteVal(String s) {
+  private static String substituteVal(String s) {
     return PropertiesUtil.substitute(s, SUBSTITUTES.get());
   }
 
-  private SimpleMap<String> wrap(SimpleMap<String> delegate) {
+  /** provides a substitute view, and read-only */
+  private static Map<String, String> wrapSubstituting(Map<String, String> delegate) {
     if (delegate.size() == 0) return delegate; // avoid unnecessary object creation
-    return new SimpleMap<>() {
-      @Override
-      public String get(String key) {
-        return subtituteVal(delegate.get(key));
-      }
-
-      @Override
-      public void forEachEntry(BiConsumer<String, ? super String> fun) {
-        delegate.forEachEntry((k, v) -> fun.accept(k, subtituteVal(v)));
-      }
-
-      @Override
-      public int size() {
-        return delegate.size();
-      }
-    };
+    return new SubstitutingMap(delegate);
   }
 
   @Override
@@ -88,11 +74,11 @@ public class DataConfigNode implements ConfigNode {
 
   @Override
   public String txt() {
-    return subtituteVal(textData);
+    return substituteVal(textData);
   }
 
   @Override
-  public SimpleMap<String> attributes() {
+  public Map<String, String> attributes() {
     return attributes;
   }
 
@@ -104,13 +90,17 @@ public class DataConfigNode implements ConfigNode {
 
   @Override
   public List<ConfigNode> getAll(String name) {
-    return kids.get(name, Collections.emptyList());
+    return kids.getOrDefault(name, List.of());
   }
 
   @Override
-  public List<ConfigNode> getAll(Predicate<ConfigNode> test, Set<String> matchNames) {
+  public List<ConfigNode> getAll(Set<String> names, Predicate<ConfigNode> test) {
+    if (names == null) {
+      return ConfigNode.super.getAll(names, test);
+    }
+    // fast implementation based on our index on named children:
     List<ConfigNode> result = new ArrayList<>();
-    for (String s : matchNames) {
+    for (String s : names) {
       List<ConfigNode> vals = kids.get(s);
       if (vals != null) {
         vals.forEach(
@@ -126,7 +116,7 @@ public class DataConfigNode implements ConfigNode {
 
   @Override
   public void forEachChild(Function<ConfigNode, Boolean> fun) {
-    kids.forEachEntry(
+    kids.forEach(
         (s, configNodes) -> {
           if (configNodes != null) {
             configNodes.forEach(fun::apply);
@@ -134,6 +124,74 @@ public class DataConfigNode implements ConfigNode {
         });
   }
 
-  public static final SimpleMap<List<ConfigNode>> EMPTY =
-      new WrappedSimpleMap<>(Collections.emptyMap());
+  private static class SubstitutingMap extends AbstractMap<String, String> {
+
+    private final Map<String, String> delegate;
+
+    SubstitutingMap(Map<String, String> delegate) {
+      this.delegate = delegate;
+    }
+
+    @Override
+    public String get(Object key) {
+      return substituteVal(delegate.get(key));
+    }
+
+    @Override
+    public int size() {
+      return delegate.size();
+    }
+
+    @Override
+    public Set<String> keySet() {
+      return delegate.keySet();
+    }
+
+    @Override
+    public void forEach(BiConsumer<? super String, ? super String> action) {
+      delegate.forEach((k, v) -> action.accept(k, substituteVal(v)));
+    }
+
+    @Override
+    public Set<Entry<String, String>> entrySet() {
+      return new AbstractSet<>() {
+        @Override
+        public Iterator<Entry<String, String>> iterator() {
+          // using delegate, return an iterator using Streams
+          return delegate.entrySet().stream()
+              .map(entry -> (Entry<String, String>) new SubstitutingEntry(entry))
+              .iterator();
+        }
+
+        @Override
+        public int size() {
+          return delegate.size();
+        }
+      };
+    }
+
+    private static class SubstitutingEntry implements Entry<String, String> {
+
+      private final Entry<String, String> delegateEntry;
+
+      SubstitutingEntry(Entry<String, String> delegateEntry) {
+        this.delegateEntry = delegateEntry;
+      }
+
+      @Override
+      public String getKey() {
+        return delegateEntry.getKey();
+      }
+
+      @Override
+      public String getValue() {
+        return substituteVal(delegateEntry.getValue());
+      }
+
+      @Override
+      public String setValue(String value) {
+        throw new UnsupportedOperationException();
+      }
+    }
+  }
 }
